[package]
name = "blake2"
version = "0.11.0-rc.0"
description = "BLAKE2 hash functions"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/blake2"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "blake2", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.11.0-rc.0", features = ["mac"] }
base64 = "0.21"
wit-bindgen = "0.42.1"
arrayref = "0.3"
blake2 = "0.10"
sha2 = "0.10"
curve25519-dalek = { version = "4.1.3", default-features = false, optional = true }

[dev-dependencies]
digest = { version = "0.11.0-rc.0", features = ["dev"] }
hex-literal = "1"
base16ct = { version = "0.2", features = ["alloc"] }

[features]
default = ["alloc"]
alloc = ["digest/alloc"]
zeroize = ["digest/zeroize"]
reset = [] # Enable reset functionality
#simd = []
#simd_opt = ["simd"]
#simd_asm = ["simd_opt"]
size_opt = [] # Optimize for code size. Removes some `inline(always)`
use-curve25519 = ["dep:curve25519-dalek"] 

[package.metadata.docs.rs]
all-features = true
